// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`polyfills > bundler vite > build > should create valid app 1`] = `
===================================================================
--- sourceHtml
+++ clientHtml
@@ -1,30 +1,36 @@
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8">
     <title>
       polyfill
     </title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1"
     >
     <link
       rel="modulepreload"
       href="/static/polyfills/vite-client-C-0jP4HP.js"
       crossorigin
     >
   </head>
   <body>
     <div id="app">
       <div>
         App with a polyfill
       </div>
     </div>
     <script
       type="module"
       src="/static/polyfills/vite-client-C-0jP4HP.js"
     >
     </script>
+    <p>
+      This node was injected by the 'injected' global function.
+    </p>
+    <p>
+      This node was injected by the '3rd-party-polyfill' dependency.
+    </p>
   </body>
 </html>
\\ No newline at end of file
`;

exports[`polyfills > bundler vite > start > should start a development server 1`] = `
===================================================================
--- sourceHtml
+++ clientHtml
@@ -1,68 +1,74 @@
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8">
     <title>
       polyfill
     </title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1"
     >
     <link
       data-chunk="main"
       rel="preload"
       as="script"
       href="/runtime.js"
     >
     <link
       data-chunk="main"
       rel="preload"
       as="script"
       href="/2.js"
     >
     <link
       data-chunk="main"
       rel="preload"
       as="script"
       href="/main.js"
     >
   </head>
   <body>
     <div id="app">
       <div>
         App with a polyfill
       </div>
     </div>
     <script
       id="__LOADABLE_REQUIRED_CHUNKS__"
       type="application/json"
     >
       []
     </script>
     <script
       id="__LOADABLE_REQUIRED_CHUNKS___ext"
       type="application/json"
     >
       {"namedChunks":[]}
     </script>
     <script
       async
       data-chunk="main"
       src="/runtime.js"
     >
     </script>
     <script
       async
       data-chunk="main"
       src="/2.js"
     >
     </script>
     <script
       async
       data-chunk="main"
       src="/main.js"
     >
     </script>
+    <p>
+      This node was injected by the 'injected' global function.
+    </p>
+    <p>
+      This node was injected by the '3rd-party-polyfill' dependency.
+    </p>
   </body>
 </html>
\\ No newline at end of file
`;

exports[`polyfills > bundler webpack > build > should create valid app 1`] = `
===================================================================
--- sourceHtml
+++ clientHtml
@@ -1,68 +1,74 @@
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8">
     <title>
       polyfill
     </title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1"
     >
     <link
       data-chunk="main"
       rel="preload"
       as="script"
       href="/static/polyfills/runtime.js"
     >
     <link
       data-chunk="main"
       rel="preload"
       as="script"
       href="/static/polyfills/2.js"
     >
     <link
       data-chunk="main"
       rel="preload"
       as="script"
       href="/static/polyfills/main.js"
     >
   </head>
   <body>
     <div id="app">
       <div>
         App with a polyfill
       </div>
     </div>
     <script
       id="__LOADABLE_REQUIRED_CHUNKS__"
       type="application/json"
     >
       []
     </script>
     <script
       id="__LOADABLE_REQUIRED_CHUNKS___ext"
       type="application/json"
     >
       {"namedChunks":[]}
     </script>
     <script
       async
       data-chunk="main"
       src="/static/polyfills/runtime.js"
     >
     </script>
     <script
       async
       data-chunk="main"
       src="/static/polyfills/2.js"
     >
     </script>
     <script
       async
       data-chunk="main"
       src="/static/polyfills/main.js"
     >
     </script>
+    <p>
+      This node was injected by the 'injected' global function.
+    </p>
+    <p>
+      This node was injected by the '3rd-party-polyfill' dependency.
+    </p>
   </body>
 </html>
\\ No newline at end of file
`;

exports[`polyfills > bundler webpack > start > should start a development server 1`] = `
===================================================================
--- sourceHtml
+++ clientHtml
@@ -1,68 +1,74 @@
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8">
     <title>
       polyfill
     </title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1"
     >
     <link
       data-chunk="main"
       rel="preload"
       as="script"
       href="/runtime.js"
     >
     <link
       data-chunk="main"
       rel="preload"
       as="script"
       href="/2.js"
     >
     <link
       data-chunk="main"
       rel="preload"
       as="script"
       href="/main.js"
     >
   </head>
   <body>
     <div id="app">
       <div>
         App with a polyfill
       </div>
     </div>
     <script
       id="__LOADABLE_REQUIRED_CHUNKS__"
       type="application/json"
     >
       []
     </script>
     <script
       id="__LOADABLE_REQUIRED_CHUNKS___ext"
       type="application/json"
     >
       {"namedChunks":[]}
     </script>
     <script
       async
       data-chunk="main"
       src="/runtime.js"
     >
     </script>
     <script
       async
       data-chunk="main"
       src="/2.js"
     >
     </script>
     <script
       async
       data-chunk="main"
       src="/main.js"
     >
     </script>
+    <p>
+      This node was injected by the 'injected' global function.
+    </p>
+    <p>
+      This node was injected by the '3rd-party-polyfill' dependency.
+    </p>
   </body>
 </html>
\\ No newline at end of file
`;
